compiler/src/test/resources/golden/errors/exh_missing_ctor.dawn
type Shape =
  | Circle(r: Float)
  | Rect(w: Float, h: Float)

fn area(s: Shape) -> Float =
  match s {
    Circle(r) -> r
  }
