compiler/src/test/resources/golden/errors/exh_missing_ctor.err
error: non-exhaustive match, missing: Rect
  --> exh_missing_ctor.dawn:6:3
  |
6 |   match s {
  |   ^^^^^^^^^
  = hint: add arms for the missing constructors, or a catch-all _
